----------------------------------------------------------------------------
libgphoto2 CVS HEAD

drivers (camlibs):

   * Canon driver:
     - added support for G5, Optura 20
     - re-added support for A300 and S50

   * PTP driver:
     - enhanced Canon Capture support.
     - added id for Canon Digital IXUS i.

packaging:

   * linux hotplug scripts:
     - use correct directories in usbcam.x11-app

----------------------------------------------------------------------------
libgphoto2 2.1.3

   * builtin cache:
     - use all available RAM on systems without memory size detection

drivers (camlibs):

   * Canon driver:
     - added support for EOS 300D
     - fixed ProductID for PowerShot S45
     - fixed support for serial cameras
     - fixed thumbnail stuff

   * New driver for Ricoh Caplio G3.

   * Smal driver:
     - misc improvements

   * PTP2 driver:
     - added misc cameras
     - thumbnail hacks (?)

----------------------------------------------------------------------------
libgphoto2 2.1.2

   * fixed nasty stack overflow/segfault bug
   * improved/fixed support for Sun

drivers (camlibs):

   * All drivers:
     - report vendor/model in a new (formatted) fashion

   * Canon driver: 
     - added support for capturing on consumer class cameras, tested on
       Canon PowerShot S45, Canon PowerShot G2
     - G2 works again running from AC adapter
     - multiple new models added (A60, A70, ...)

   * PTP2 driver:
     - Next generation PTP driver added, using this as default now.

   * New Agfa CL20 driver from http://cl20.poeml.de/.

   * New camera library spca50x for all chips supporting the spca50x bridges
     (merging the gsmart, benq and spca504_flash driver into one).


----------------------------------------------------------------------------
libgphoto2 2.1.1

   * separated libgphoto2 sources from gphoto2 command line interface

   * gphoto2 manual moved to separate package gphoto2-manual

drivers (camlibs):

   * Ricoh
