@@ -1,3 +1,7 @@
+2004-01-06 Marcus Meissner <marcus@jet.franken.de>
+
+	* Multiple USB camera support.
+
 2003-11-19 Theodore Kilgore <kilgota@auburn.edu> 
 
 	* configure.in: Hook up camlibs/aox (driver by Theodore Kilgore).
