@@ -1,3 +1,7 @@
+2004-01-06  Marcus Meissner <marcus@jet.franken.de>
+
+	* Multiple USB Devices at once support.
+
 2003-12-11  Lutz Mueller <lutz@users.sourceforge.net>
 
 	Patch by Andreas Burmester <a.burmester@hamburg.de>:
