@@ -1,6 +1,9 @@
 ----------------------------------------------------------------------------
 libgphoto2 CVS HEAD
 
+   * Support multiple USB devices by introducing additional USB ports,
+     usb:<bus>,<device>.
+
 drivers (camlibs):
 
    * Canon driver:
